[package]
name = "cosmian_kms_crypto"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMS Crypto - cryptographic operations and algorithms"

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
# Enable FIPS module feature build. KMS builds in FIPS mode when this is enabled.
non-fips = [
    "cosmian_kmip/non-fips",
    "cosmian_crypto_core/ecies",
    "cosmian_crypto_core/blake",
    "cosmian_crypto_core/chacha",
    "cosmian_cover_crypt",
    "aes-gcm-siv",
    "argon2",
    "dep:sha2",
    "dep:p256",
    "dep:k256",
]

[dependencies]
aes-gcm-siv = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
base64 = { workspace = true }
cosmian_cover_crypt = { workspace = true, optional = true }
cosmian_crypto_core = { workspace = true, features = ["aes", "sha3"] }
cosmian_kmip = { path = "../kmip", version = "5.17.0" }
cosmian_logger = { workspace = true }
hex = { workspace = true }
num-bigint-dig = { workspace = true, features = [
    "std",
    "rand",
    "serde",
    "zeroize",
] }
openssl = { workspace = true }
rust-ini = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive", "serde"] }
sha2 = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
k256 = { workspace = true, optional = true }

[dev-dependencies]
aes-kw = { workspace = true }
cosmian_logger = { workspace = true }
ctor = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[package.metadata.cargo-machete]
ignored = ["rust-ini"]

[build-dependencies]
sha2 = { workspace = true }
