[package]
name = "cosmian_kms_crypto"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMS Crypto - cryptographic operations and algorithms"

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
# Enable FIPS module feature build. KMS builds in FIPS mode when this is enabled.
non-fips = [
  "cosmian_kmip/non-fips",
  "cosmian_crypto_core/ecies",
  "cosmian_crypto_core/blake",
  "cosmian_crypto_core/chacha",
  "cosmian_cover_crypt",
  "aes-gcm-siv",
  "argon2",
  "dep:chrono",
  "dep:regex",
  "dep:rand",
  "dep:rand_chacha",
  "dep:rand_distr",
  "dep:sha2",
  "dep:p256",
  "dep:k256",
  "dep:aes",
  "dep:cbc",
  "dep:cipher",
  "dep:itertools",
  "dep:num-bigint",
  "dep:num-traits",
]

[dependencies]
aes = { workspace = true, optional = true }
aes-gcm-siv = { version = "0.11.1", optional = true }
argon2 = { version = "0.5", optional = true }
chrono = { workspace = true, optional = true }
base64 = { workspace = true }
cbc = { workspace = true, optional = true }
cipher = { workspace = true, optional = true }
cosmian_cover_crypt = { version = "16.0.0", optional = true }
cosmian_crypto_core = { workspace = true, features = ["aes", "sha3"] }
cosmian_kmip = { path = "../kmip", version = "5.20.1" }
cosmian_logger = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true, optional = true }
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
num-bigint = { workspace = true, optional = true }
num-bigint-dig = { workspace = true, features = [
  "std",
  "rand",
  "serde",
  "zeroize",
] }
openssl = { workspace = true }
openssl-sys = "0.9"
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
num-traits = { workspace = true, optional = true }
rand_distr = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
regex = { version = "1", optional = true }
rust-ini = "0.21"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive", "serde"] }

[dev-dependencies]
aes-kw = "0.3.0-rc.1"
cosmian_logger = { workspace = true }
ctor = "0.2"
rand = "0.8"
rand_chacha = "0.3"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[package.metadata.cargo-machete]
ignored = ["rust-ini"]

[build-dependencies]
sha2 = { workspace = true }
