[package]
name = "cosmian_findex_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
fips = ["cosmian_kms_client/fips", "test_kms_server/fips"]

[dependencies]
base64 = { workspace = true }
cosmian_crypto_core = { workspace = true }
cosmian_findex = { workspace = true, features = ["redis-mem"] }
cosmian_findex_structs = { workspace = true }
cosmian_http_client = { workspace = true }
cosmian_kms_client = { path = "../kms_client" }
cosmian_logger = { workspace = true }
reqwest = { workspace = true, features = ["default", "json", "native-tls"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
cosmian_findex = { workspace = true, features = ["test-utils"] }
rand = { workspace = true }
rand_chacha = "0.9.0"
test_kms_server = { path = "../test_kms_server" }
tokio = { workspace = true }
