[package]
name = "cosmian_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Graphical interface for the CLI to interact with KMS and Findex server"

[[bin]]
name = "cosmian_gui"
path = "src/main.rs"
test = false

[features]
fips = ["cosmian_cli/fips"]

[dependencies]
clap = "4.5"
cosmian_cli = { path = "../cli" }
klask = { git = "https://github.com/Cosmian/klask.git" }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "winuser"] }
