[package]
name = "cosmian_kms_interfaces"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Crate exposing APIs for plugins to the Cosmian KMS"

[lib]
doctest = false

[dependencies]
cosmian_kmip = { path = "../kmip" }
async-trait = { workspace = true }
num-bigint-dig = { workspace = true, features = [
    "std",
    "rand",
    "serde",
    "zeroize",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true, default-features = true }

