[package]
name = "cosmian_kms_interfaces"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Crate exposing APIs for plugins to the Cosmian KMS"

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
cosmian_kmip = { path = "../kmip", version = "5.4.1" }
num-bigint-dig = { workspace = true, features = [
    "std",
    "rand",
    "serde",
    "zeroize",
] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"] }
