[package]
name = "cosmian_kms_interfaces"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Crate exposing APIs for plugins to the Cosmian KMS"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
cosmian_kmip = { path = "../kmip", version = "5.16.1" }
cosmian_logger = { workspace = true }
num-bigint-dig = { workspace = true, features = [
  "std",
  "rand",
  "serde",
  "zeroize",
] }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, default-features = true }
