[package]
name = "kmip-derive"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMIP Derive Macros"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
