[package]
name = "cosmian_kmip"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMIP library"

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
# Enable FIPS module feature build. KMS builds in FIPS mode when this is enabled.
fips = []

[dependencies]
bitflags = { workspace = true }
cosmian_logger = "0.1.1"
hex = { workspace = true, features = ["std"] }
kmip-derive = { workspace = true }
leb128 = { workspace = true }
num-bigint-dig = { workspace = true, features = [
    "std",
    "rand",
    "serde",
    "zeroize",
] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = [] }
strum = { workspace = true, features = ["std", "derive", "strum_macros"] }
thiserror = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "parsing",
    "serde",
    "macros",
] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["zeroize_derive", "std", "serde"] }

[package.metadata.cargo-machete]
ignored = ["rust-ini", "sha3"]

[dev-dependencies]
hex = { workspace = true, features = ["std"] }
num-traits = { workspace = true }
rand = { workspace = true }
