[package]
name = "cosmian_kmip"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMIP library"

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
# Enable FIPS module feature build. KMS builds in FIPS mode when this is enabled.
non-fips = []

[dependencies]
base64 = { workspace = true }
bitflags = { workspace = true }
cosmian_logger = { workspace = true }
hex = { workspace = true, features = ["std"] }
kmip-derive = { path = "../kmip-derive", version = "5.12.1" }
leb128 = { workspace = true }
num-bigint-dig = { workspace = true, features = [
  "std",
  "rand",
  "serde",
  "zeroize",
] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = [] }
strum = { workspace = true, features = ["std", "derive", "strum_macros"] }
thiserror = { workspace = true }
time = { workspace = true, features = [
  "formatting",
  "parsing",
  "serde",
  "macros",
] }
num-traits = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["zeroize_derive", "std", "serde"] }

[package.metadata.cargo-machete]
ignored = ["rust-ini", "sha3"]

[dev-dependencies]
hex = { workspace = true, features = ["std"] }
num-traits = { workspace = true }
rand = { workspace = true }
