[package]
name = "cosmian_kmip"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMIP library"

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
default = ["interop"]
# Enable FIPS module feature build. KMS builds in FIPS mode when this is enabled.
non-fips = []
# Enable interop test operations (should only be used for testing)
interop = []

[dependencies]
base64 = { workspace = true }
bitflags = { workspace = true }
cosmian_logger = { workspace = true }
hex = { workspace = true, features = ["std"] }
kmip-derive = { path = "../kmip-derive", version = "5.16.2" }
leb128 = { workspace = true }
num-bigint-dig = { workspace = true, features = [
  "std",
  "rand",
  "serde",
  "zeroize",
] }
num-traits = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["zeroize_derive", "std", "serde"] }
quick-xml = { version = "0.31", features = ["serialize"] }
regex = { version = "1" }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = [] }
strum = { workspace = true, features = ["std", "derive", "strum_macros"] }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
  "formatting",
  "parsing",
  "serde",
  "macros",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[package.metadata.cargo-machete]
ignored = ["rust-ini", "sha3"]

[dev-dependencies]
hex = { workspace = true, features = ["std"] }
num-traits = { workspace = true }
rand = { workspace = true }
