[package]
name = "cosmian_kms_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMS REST Client"

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
non-fips = ["cosmian_kms_client_utils/non-fips"]

[dependencies]
cosmian_crypto_core = { workspace = true }
cosmian_http_client = { path = "/Users/manu/Cosmian/core/http_client_server/crate/http_client" }
# cosmian_http_client = "0.4"
cosmian_kms_client_utils = { path = "../client_utils", version = "5.7.1" }
der = { workspace = true }
pem = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
