[package]
name = "cosmian_kms_client"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMS REST Client"

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
non-fips = ["cosmian_kms_client_utils/non-fips"]

[dependencies]
cosmian_crypto_core = { workspace = true }
cosmian_http_client = "0.6"
cosmian_kms_client_utils = { path = "../client_utils", version = "5.14.0" }
cosmian_logger = { workspace = true }
der = { workspace = true }
pem = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
