[package]
name = "libsgx"
version = "4.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/enclave_manifest.html

[dependencies]
base64 = { workspace = true }
base64-url = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { version = "8.3", features = ["use_pem"] }
openssl = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2.3"
