[package]
name = "cosmian_logger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
