[package]
name = "ckms_pkcs11"
version = "4.13.3"
edition = "2021"

[lib]
name = "ckms_pkcs11"
crate-type = ["rlib", "dylib"]

[dependencies]
cosmian_kmip = { path = "../kmip" }
cosmian_kms_client = { path = "../client" }
cosmian_logger = { path = "../logger" }
etcetera = "0.8.0"
#native-pkcs11 = { git = "https://github.com/Cosmian/native-pkcs11.git", branch = "windows", features = ["custom-function-list"] }
#native-pkcs11-traits = { git = "https://github.com/Cosmian/native-pkcs11.git", branch = "main" }
native-pkcs11 = {path = "../../../native-pkcs11/native-pkcs11", features = ["custom-function-list"]}
native-pkcs11-traits = {path = "../../../native-pkcs11/native-pkcs11-traits"}
serde_json = { workspace = true }
sha3 = "0.10.8"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zeroize = { workspace = true }

[dev-dependencies]
kms_test_server = { path = "../test_server" }