[package]
name = "ckms_pkcs11"
version = "4.14.2"
edition = "2021"

[lib]
name = "ckms_pkcs11"
crate-type = ["rlib", "dylib"]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[dependencies]
cosmian_kmip = { path = "../kmip" }
cosmian_kms_client = { path = "../client" }
cosmian_logger = { path = "../logger" }
etcetera = "0.8.0"
native-pkcs11 = { git = "https://github.com/Cosmian/native-pkcs11.git", rev = "402000cef7763e72c82231f069a8dc8bad847ab8", features = [
  "custom-function-list",
] }
native-pkcs11-traits = { git = "https://github.com/Cosmian/native-pkcs11.git", rev = "402000cef7763e72c82231f069a8dc8bad847ab8" }
serde_json = { workspace = true }
sha3 = "0.10.8"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zeroize = { workspace = true }

[dev-dependencies]
kms_test_server = { path = "../test_server" }
