[package]
name = "ckms_pkcs11"
version = "4.15.0"
edition = "2021"

[lib]
name = "ckms_pkcs11"
crate-type = ["rlib", "dylib"]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[dependencies]
cosmian_kmip = { path = "../kmip" }
cosmian_kms_client = { path = "../client" }
cosmian_logger = { path = "../logger" }
etcetera = "0.8.0"
native-pkcs11 = { git = "https://github.com/Cosmian/native-pkcs11.git", rev="114c93de2e32c2b943578f0aad1c0f43d69e7726", features = [
  "custom-function-list",
] }
native-pkcs11-traits = { git = "https://github.com/Cosmian/native-pkcs11.git", rev="114c93de2e32c2b943578f0aad1c0f43d69e7726" }
serde_json = { workspace = true }
sha3 = "0.10.8"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zeroize = { workspace = true }

[dev-dependencies]
kms_test_server = { path = "../test_server" }
