[build-system]
requires = ["maturin>=0.13,<0.15"]
build-backend = "maturin"

[tool.maturin]
# add files from `python/cosmian_kms` to the python package
python-source = "python"

[project]
name = "cosmian_kms"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
