[package]
name = "cosmian_kms_rbac"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Cosmian KMS RBAC - Role-Based Access Control with OPA/Rego policy engine"

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
cosmian_kmip = { path = "../kmip", version = "5.21.0", default-features = true }
cosmian_logger = { workspace = true }
regorus = { version = "0.9", default-features = false, features = ["std"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
